@@ -1,11 +1,10 @@
 # Created by Jevoom
 #
 # 17-May-2011
-#   Added a check_key method to JerbilService::Base to hide key checking.
-#   Cleaned up some unnecessary system logging in jerbil.
+#   Added a log entry for invalid service keys
 
 module Jerbil
-  Version = '0.1.2'
+  Version = '0.1.3'
   Version_Date = '17-May-2011'
-  Ident = 'jerbil-0.1.2 17-May-2011'
+  Ident = 'jerbil-0.1.3 17-May-2011'
 end
